# LLM-Powered-Document-Processing-Agent

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  setup.sh
backend/: .env.example  Dockerfile  pyproject.toml  seed_data.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: document_agent.py
backend/app/api/: auth.py  documents.py  schemas.py
backend/app/models/: models.py
backend/app/services/: celery_worker.py  storage_service.py
backend/app/tools/: document_loader.py  email_sender.py  hf_qa_tool.py  sql_validator.py
backend/app/utils/: auth.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: DashboardPage.tsx  DocumentDetailPage.tsx  DocumentsPage.tsx  LoginPage.tsx  RegisterPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts  store.ts
frontend/src/types/: index.ts
