[tool.poetry]
name = "intelligent-document-processor"
version = "0.1.0"
description = "LLM-Powered Intelligent Document Processing Agent"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-huggingface = "^0.1.0"
transformers = "^4.36.2"
torch = "^2.1.2"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
celery = "^5.3.6"
redis = "^5.0.1"
boto3 = "^1.34.19"
chromadb = "^0.4.22"
pypdf2 = "^3.0.1"
pytesseract = "^0.3.10"
pillow = "^10.2.0"
pandas = "^2.1.4"
loguru = "^0.7.2"
slowapi = "^0.1.9"
httpx = "^0.26.0"
sentence-transformers = "^2.2.2"
pdf2image = "^1.16.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
